fixed resume off screen from 600-1000px and footer being smashed together

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -150,7 +150,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 840px) {
   .footer {
     padding: 20px;
     padding-top: 90px;
